# multitask-oss

./: .gitignore  CLAUDE.md  README.txt  bench.py  cloud_agent.db  example-trace.txt  example-trace2.txt  modal_run.py  modal_trace_12419.txt  openclaw-arch.txt  pyproject.toml  report-6-28.txt  results.jsonl  results_anchored.jsonl  results_gpt4o.jsonl  results_gpt55.jsonl  roadmap.txt  run_agent.py  swe_bench_run.py
agent/: __init__.py  budgets.py  completion_checker.py  context.py  docker_runner.py  escalation.py  graph.py  nodes.py  prompts.py  runtime.py  state.py  subsession.py  tools.py
blueprints/: devloop.py
blueprints/nodes/: check_branch.py  checkpoint.py  define_contract.py  gather_additive_context.py  gather_context.py  implement.py  implement_task.py  load_task.py  prepare_context.py  reproduce_issue.py  seed_scripts.py  verify.py  verify_additive.py  verify_fix.py
cloud_agent/: cli.py  config.py
cloud_agent/agent/: budgets.py  completion_checker.py  context.py  prompts.py  state.py  subsession.py
cloud_agent/blueprints/: devloop.py
cloud_agent/db/: store.py
cloud_agent/observability/: tracer.py
cloud_agent/tools/: registry.py  shell.py
db/: store.py
demo_repo/: math_utils.py  test_math_utils.py
demo_repo/demo_repo/: test_main.py
observability/: tracer.py
plan/: README.txt
plan/01-vision/: design-principles.txt  project-vision.txt
plan/02-architecture/: component-descriptions.txt  openclaw-integration.txt  system-map.txt
plan/03-devloop-blueprint/: agent-state.txt  blueprint-engine.txt  node-graph.txt  node-specs.txt
plan/04-subagent-system/: planning-agent.txt  (+4 more)
tests/: test_context.py  test_escalation.py  test_gather_context_tools.py  test_implement_task_node.py  test_verify.py
tools/: filesystem.py  gather_context_tools.py  git.py  registry.py  search.py  shell.py  tests.py
(+24 files in other folders)
